# wdl

./: .gitignore  .pylintrc  Documentation_for_wavgen.pptx  Lexer.py  LexerDriver.py  LexerDriver_output.txt  Makefile  Makefile.master  README.md  Symbols.py  genericCharacter.py  genericScanner.py  genericToken.py  incParserDriver.py  ini2acf.pl  insert_hash  minimal.mod  minimal.signals  modParserDriver.py  modegenDriver.py  pyproject.toml  requirements.txt  seqParserDriver.py  wavgen.py  wavgenDriver.py  wdlParser.py  wdlParserDriver.py
.github/workflows/: acf-demo-workflow.yml  install-deps.sh  pylint.yml
demo/: .modules  .system  Demo.acf  Demo.cds  Demo.def  Demo.modes  Demo.seq  Demo.signals  Demo.waveform  Demo_TMP.script  Demo_TMP.states  Demo_TMP.wdl  Makefile
test/wdl_inputs/: Demo.conf  Demo.mod  Makefile
tools/: preprocess.py  wdlbuild.py
wdl/: Lexer.py  LexerDriver.py  Makefile  Symbols.py  __main__.py  cli.py  genericCharacter.py  genericScanner.py  genericToken.py  incParserDriver.py  ini2acf.py  minimal.signals  minimal_TMP.wdl  modParserDriver.py  modegen.py  modegenDriver.py  seqParserDriver.py  timing_segment.py  wavgen.py  wavgen2.py  wavgenDriver.py  wavgenDriver2.py  wdlParser.py  wdlParserDriver.py
wdl/commands/: driverbase.py  legacy_drivers.py  preprocess.py
