[build-system]
requires = ["setuptools>=64", "wheel", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["wdl"]

[tool.setuptools_scm]
version_file = "wdl/_version.py"

[project]
name = "wdl"
dynamic = ["version"]

description = "WDL (Waveform Definition Language) is designed for use with Archons. This library provides tools and instructions for setting up and using WDL efficiently."
authors = [{name = "Caltech Optical Observatories"}]
dependencies = [
    "numpy>=2.0.2",
    "scipy>=1.13.1",
    "matplotlib>=3.9.2",
    "PyQt5>=5.15"
]


#note this is a GUESS. With agreement from COO software people (I need context for this)
#I would like to bump this sooner. Note python 3.8 was released in 2019, and is the default python for e.g. ubuntu 20.04
#On ubuntu 20.04, python 3.10 is available from "official" sources and as recent as python 3.12 is available from PPAs.
#This is not including, of course, installing a conda distribution to get python whatever.
requires-python = ">=3.8"

[project.urls]
Repository = "https://github.com/CaltechOpticalObservatories/wdl"


[project.scripts]
# the "new" command line tool
wdl = "wdl.cli:main"
ini2acf = "wdl.ini2acf:main"

#command script wrappers for legacy .py "Driver" scripts
"LexerDriver.py" = "wdl.LexerDriver:__main__"


